--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <li><a href="https://ninjasfiles.s3.amazonaws.com/certificate150132459152ab06834db52658df1ef666a11ab.pdf">Coding Ninjas C++ Fundamentals (Excellent performer)</a></li>
     </ul>
   </p>
-  <h3><a href="C:\Users\R P SHARMA\Documents\Web dev\HTML Personal site\Contact_details.html">Contact Details</a></h3>
+  <h3><a href="Contact_details.html">Contact Details</a></h3>
 </body>
 
 </html>
