--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\R P SHARMA\Documents\Web dev\HTML Personal site\196574030_814405279451636_3897725781674869244_n.jpg" alt="image not available"></td>
+      <td><img src="HTML Personal site\196574030_814405279451636_3897725781674869244_n.jpg" alt="image not available"></td>
       <td><h1> Jai Saraswat</h1>
         <p><em> 3rd year B.E. student at <strong>Ramaiah Institute of Technology</strong></em></p>
         <p> Looking forward to solve complex problems by the virtue of <i>software development</i> and <i>optimization techniques </i></p></td>
